tests/syntax_error/self_not_first.jou
class Foo:
    def bar(x: int, self) -> None:  # Error: 'self' must be the first argument
        return
